CIDE_Language_gCIDE/src/tmp/generated_gcide/SlimJJParser.java
/* Generated By:JavaCC: Do not edit this line. SlimJJParser.java */
package tmp.generated_gcide;

import java.io.*;
import java.util.*;
import cide.gast.*;
import cide.gparser.*;

public class SlimJJParser implements SlimJJParserConstants {
/**
	 * Accumulate {@link Token} objects from the token stream until a token
	 * matching <code>tokenKind</code> is consumed from the stream. The tokens
	 * are accumulated in <code>buffer</code>, including the terminating
	 * token.
	 * 
	 * @return a {@link Token} formed by concatenating all intervening tokens
	 *         and special tokens.
	 */
        final private Token accumulateUntilToken(int tokenKind)
                        throws ParseException {

                StringBuffer buffer = new StringBuffer();
                Token token = getNextToken();

                // Initialize result with known information (starting position, etc.):
                //
                Token result = Token.newToken(OTHER);
                result.specialToken = null;

                Token startToken = firstSpecial(token);
                result.beginColumn = startToken.beginColumn;
                result.beginLine = startToken.beginLine;

                // Accumulate tokens until a <code>tokenKind</code> token is found:
                //
                while (token.kind != tokenKind) {

                        // Update information in result:
                        //
                        result.endColumn = token.endColumn;
                        result.endLine = token.endLine;
                        result.next = token.next;

                        if (token.kind == EOF)
                                throw new ParseException("from line " + result.beginLine
                                                + " at column " + result.beginColumn
                                                + ": EOF reached before " + tokenImage[tokenKind]
                                                + " found");

                        accumulate(token, buffer);
                        token = getNextToken();
                }

                accumulate(token, buffer);

                result.image = buffer.toString();
                return result;
        }

        /**
	 * Append the given {@link Token} and any preceding special tokens to a
	 * given {@link StringBuffer}.
	 * 
	 * @param token
	 *            the given JavaCC {@link Token} object
	 * @param buffer
	 *            the buffer to which to append <code>token</code>
	 */
        final private static void accumulate(Token token, StringBuffer buffer) {

                // Append preceding special tokens to <code>buffer</code>:
                //
                Token special = firstSpecial(token);
                if (special != token)
                        while (special != null) {
                                buffer.append(" "+special.toString());
                                special = special.next;
                        }

                // Finally, append the token itself:
                //
                buffer.append(" "+token.toString());
        }

        /**
	 * Finds the first token, special or otherwise, in the list of special
	 * tokens preceding this {@link Token}. If this list is non-empty, the
	 * result will be a special token. Otherwise, it will be the starting token.
	 * 
	 * @param token
	 *            the given {@link Token}.
	 * @return the first special token preceding <code>token</code>.
	 */
        final private static Token firstSpecial(Token token) {

                while (token.specialToken != null)
                        token = token.specialToken;

                return token;
        }

  Token findIntroductionBlock() throws ParseException {
    return accumulateUntilToken (_GRAMMARSTART) ;
  }

  final public Grammar Grammar() throws ParseException {
        Token t;
        ASTStringNode findintroductionblock;
        Production production;
        ArrayList<Production> productionList = new ArrayList<Production>();
        ASTStringNode eof;
        Token firstToken=token;
    t = findIntroductionBlock();
                                  findintroductionblock=new ASTStringNode(t.toString(),new WToken(t));
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      production = Production();
                                                                                                                                 productionList.add(production);
    }
    t = jj_consume_token(0);
                                                                                                                                                                            eof=new ASTStringNode(t.toString(),new WToken(t));
         {if (true) return new Grammar(findintroductionblock, productionList, eof, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public Production Production() throws ParseException {
        Token t;
        ASTStringNode identifier;
        Choice choice;
        ArrayList<Choice> list0=new ArrayList<Choice>();
        Choice choice1;
        ArrayList<Choice> choice1List = new ArrayList<Choice>();
        Token firstToken=token;
    t = jj_consume_token(IDENTIFIER);
                       identifier=new ASTStringNode(t.toString(),new WToken(t));
    jj_consume_token(COLON);
    choice = Choice();
                                                                                                      list0.add(choice);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BIT_OR:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      jj_consume_token(BIT_OR);
      choice1 = Choice();
                                                                                                                                                list0.add(choice1);
    }
    jj_consume_token(SEMICOLON);
         {if (true) return new Production(list0, identifier, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public Choice Choice() throws ParseException {
        Text text;
        ArrayList<Text> textList = new ArrayList<Text>();
        MultAndText multAndText;
        ArrayList<MultAndText> multAndTextList = new ArrayList<MultAndText>();
        Token t;
        ASTStringNode identifier = null;
        Token firstToken=token;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case _LOOK_AHEAD:
      case _JAVA:
      case STRING_LITERAL:
      case AT:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      text = Text();
                     textList.add(text);
    }
    label_4:
    while (true) {
      multAndText = MultAndText();
                                                                       multAndTextList.add(multAndText);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPTIONAL:
      case _JAVATOKEN:
      case LPAREN:
      case LBRACKET:
      case LT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 129:
      jj_consume_token(129);
      t = jj_consume_token(IDENTIFIER);
                                                                                                                                 identifier=new ASTStringNode(t.toString(),new WToken(t));
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
         {if (true) return new Choice(textList, multAndTextList, identifier, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public MultAndText MultAndText() throws ParseException {
        Mult mult;
        Text text;
        ArrayList<Text> textList = new ArrayList<Text>();
        Token firstToken=token;
    mult = Mult();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case _LOOK_AHEAD:
      case _JAVA:
      case STRING_LITERAL:
      case AT:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      text = Text();
                                 textList.add(text);
    }
         {if (true) return new MultAndText(mult, textList, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public Mult Mult() throws ParseException {
        OneOrMore oneOrMore;
        ZeroOrMore zeroOrMore;
        Wrappee wrappee;
        OneOrZero oneOrZero;
        Unit unit;
        OptionalWithDefault optionalWithDefault;
        Token firstToken=token;
    if (jj_2_1(2147483647)) {
      oneOrMore = OneOrMore();
         {if (true) return new Mult1(oneOrMore, firstToken.next,token);}
    } else if (jj_2_2(2147483647)) {
      zeroOrMore = ZeroOrMore();
         {if (true) return new Mult2(zeroOrMore, firstToken.next,token);}
    } else if (jj_2_3(2147483647)) {
      wrappee = Wrappee();
         {if (true) return new Mult3(wrappee, firstToken.next,token);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
        oneOrZero = OneOrZero();
         {if (true) return new Mult4(oneOrZero, firstToken.next,token);}
        break;
      case _JAVATOKEN:
      case LT:
      case IDENTIFIER:
        unit = Unit();
         {if (true) return new Mult5(unit, firstToken.next,token);}
        break;
      case OPTIONAL:
        optionalWithDefault = OptionalWithDefault();
         {if (true) return new Mult6(optionalWithDefault, firstToken.next,token);}
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public OneOrMore OneOrMore() throws ParseException {
        Text text;
        ArrayList<Text> textList = new ArrayList<Text>();
        Unit unit;
        Text text1;
        ArrayList<Text> text1List = new ArrayList<Text>();
        Token firstToken=token;
    jj_consume_token(LPAREN);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case _LOOK_AHEAD:
      case _JAVA:
      case STRING_LITERAL:
      case AT:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_6;
      }
      text = Text();
                         textList.add(text);
    }
    unit = Unit();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case _LOOK_AHEAD:
      case _JAVA:
      case STRING_LITERAL:
      case AT:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_7;
      }
      text1 = Text();
                                                                          text1List.add(text1);
    }
    jj_consume_token(RPAREN);
    jj_consume_token(PLUS);
         {if (true) return new OneOrMore(textList, unit, text1List, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public ZeroOrMore ZeroOrMore() throws ParseException {
        Text text;
        ArrayList<Text> textList = new ArrayList<Text>();
        Unit unit;
        Text text1;
        ArrayList<Text> text1List = new ArrayList<Text>();
        Token firstToken=token;
    jj_consume_token(LPAREN);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case _LOOK_AHEAD:
      case _JAVA:
      case STRING_LITERAL:
      case AT:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_8;
      }
      text = Text();
                         textList.add(text);
    }
    unit = Unit();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case _LOOK_AHEAD:
      case _JAVA:
      case STRING_LITERAL:
      case AT:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_9;
      }
      text1 = Text();
                                                                          text1List.add(text1);
    }
    jj_consume_token(RPAREN);
    jj_consume_token(STAR);
         {if (true) return new ZeroOrMore(textList, unit, text1List, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public OneOrZero OneOrZero() throws ParseException {
        Text text;
        ArrayList<Text> textList = new ArrayList<Text>();
        Unit unit;
        Text text1;
        ArrayList<Text> text1List = new ArrayList<Text>();
        Token firstToken=token;
    jj_consume_token(LBRACKET);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case _LOOK_AHEAD:
      case _JAVA:
      case STRING_LITERAL:
      case AT:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_10;
      }
      text = Text();
                         textList.add(text);
    }
    unit = Unit();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case _LOOK_AHEAD:
      case _JAVA:
      case STRING_LITERAL:
      case AT:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_11;
      }
      text1 = Text();
                                                                          text1List.add(text1);
    }
    jj_consume_token(RBRACKET);
         {if (true) return new OneOrZero(textList, unit, text1List, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public OptionalWithDefault OptionalWithDefault() throws ParseException {
        Unit unit;
        Token t;
        ASTStringNode string_literal;
        Token firstToken=token;
    jj_consume_token(OPTIONAL);
    jj_consume_token(LPAREN);
    unit = Unit();
    jj_consume_token(COMMA);
    t = jj_consume_token(STRING_LITERAL);
                                                          string_literal=new ASTStringNode(t.toString(),new WToken(t));
    jj_consume_token(RPAREN);
         {if (true) return new OptionalWithDefault(unit, string_literal, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public Wrappee Wrappee() throws ParseException {
        Unit unit;
        Token firstToken=token;
    unit = Unit();
    jj_consume_token(BANG);
         {if (true) return new Wrappee(unit, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public Unit Unit() throws ParseException {
        NonTerminal nonTerminal;
        Ident ident;
        Token firstToken=token;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      nonTerminal = NonTerminal();
         {if (true) return new Unit1(nonTerminal, firstToken.next,token);}
      break;
    case _JAVATOKEN:
    case LT:
      ident = Ident();
         {if (true) return new Unit2(ident, firstToken.next,token);}
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public NonTerminal NonTerminal() throws ParseException {
        Token t;
        ASTStringNode identifier;
        ASTStringNode identifier1 = null;
        Token firstToken=token;
    t = jj_consume_token(IDENTIFIER);
                       identifier=new ASTStringNode(t.toString(),new WToken(t));
    if (jj_2_4(3)) {
      jj_consume_token(LBRACE);
      t = jj_consume_token(IDENTIFIER);
                                                                                                                   identifier1=new ASTStringNode(t.toString(),new WToken(t));
      jj_consume_token(RBRACE);
    } else {
      ;
    }
         {if (true) return new NonTerminal(identifier, identifier1, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public Ident Ident() throws ParseException {
        Token t;
        ASTStringNode identifier;
        ASTStringNode identifier1;
        Token firstToken=token;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case _JAVATOKEN:
